examples/test/testpolicy6029.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6029
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key23: value18
      key44: value45
      key28: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value46
      podSelector:
        matchLabels:
          key40: value16
          key26: value24
